added input bar and Top tracks section

--- a/spotify-app/src/Pages/MainContent.module.css
+++ b/spotify-app/src/Pages/MainContent.module.css
@@ -1,4 +1,35 @@
 .main{
+    height: 100vh;
+    width: 100%;
+    color: white;
+    position: relative;
+}
 
-    text-align: initial;
+.head{
+    position: absolute;
+    width: 350px;
+    height: 36px;
+    left: 296px;
+    top: 32px;
+
+    /* font-family: 'Basier Circle'; */
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+
+   color: #FFFFFF;
+}
+
+.inp{
+   
+align-items: center;
+padding: 8px 16px;
+gap: 235px;
+position: absolute;
+width: 400px;
+height: 48px;
+top: 70px;
+
+/* border-radius: 8px; */
 }
