--- a/spotify-app/src/App.css
+++ b/spotify-app/src/App.css
@@ -1,14 +1,11 @@
 .App {
   width: 100%;
   height: 100vh;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-  justify-content: space-between;
+
   
 }
 
-.background{
+/* .background{
   position: absolute;
   top: 0;
   left: 0;
@@ -17,4 +14,4 @@
   background: linear-gradient(160deg, rgba(34,3,2,1) 11%, rgba(1,0,2,1) 90%);
   background-size: cover;
   z-index: -1;
-}
+} */
