--- a/spotify-app/src/Pages/MainContent.module.css
+++ b/spotify-app/src/Pages/MainContent.module.css
@@ -1,18 +1,21 @@
 .main{
-    height: 100vh;
-    width: 100%;
     color: white;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .head{
-    position: absolute;
+    /* position: absolute; */
     width: 350px;
     height: 36px;
-    left: 296px;
-    top: 32px;
-
-    /* font-family: 'Basier Circle'; */
+    position: sticky;
+    top: 0px;
+    z-index: 10;
+    /* left: 296px;
+    top: 32px; */
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
@@ -24,12 +27,73 @@
 .inp{
    
 align-items: center;
-padding: 8px 16px;
-gap: 235px;
-position: absolute;
-width: 400px;
+position: sticky;
+top: 5px;
+z-index: 20;
+/* padding: 8px 16px;
+gap: 235px; */
+/* position: absolute; */
+/* width: 400px; */
 height: 48px;
-top: 70px;
-
+/* top: 70px; */
 /* border-radius: 8px; */
+}
+
+.ListItem{
+    /* display: flex;
+    flex-direction: row;
+    justify-content: space-between; */
+    align-items: center;
+    padding: 16px;
+    gap: 343px;
+
+    width: 432px;
+    height: 80px;
+
+    border-radius: 8px;
+    overflow: hidden;
+
+}
+
+.frame{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 16px;
+
+    width: 144px;
+    height: 48px;
+    position: absolute;
+    
+
+}
+
+.innerFrame{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+
+    width: 80px;
+    height: 48px;
+
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+}
+
+.text{
+    width: 66px;
+height: 24px;
+font-weight: 400;
+font-size: 18px;
+line-height: 24px;
+/* identical to box height, or 133% */
+
+
+color: #FFFFFF;
 }
